[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dmgbuild>=1.6.5",
    "fitz>=0.0.1.dev2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "py2app>=0.28.8",
    "pyinstaller>=6.16.0",
    "pymupdf>=1.26.4",
    "setuptools>=80.9.0",
    "streamlit>=1.49.1",
]
